samples/_failures_safe/1761415715_250f27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acdac9c4.c: In function ‘main’:
./samples/SAFE/__tmp_acdac9c4.c:132:12: error: missing terminating " character
  132 |     printf("\nSecond
      |            ^~~~~~~~~
./samples/SAFE/__tmp_acdac9c4.c:132:5: error: expected expression at end of input
  132 |     printf("\nSecond
      |     ^~~~~~
./samples/SAFE/__tmp_acdac9c4.c:132:5: error: expected declaration or statement at end of input
